tests/baselines/reference/ES5For-of20.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of20.ts(1,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of20.ts (1 errors) ====
    for (let v of []) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        let v;
        for (let v of [v]) {
            const v;
        }
    }